guides/tiered-prefix-cache/weka/manifests/vllm/overlays/shared/envoyfilter-extproc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fix-epp-extproc
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/gateway: llm-d-inference-gateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 80
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.ext_proc
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
            failure_mode_allow: false
            grpc_service:
              envoy_grpc:
                cluster_name: outbound|9002||weka-vllm-epp.weka.svc.cluster.local
              timeout: 10s
            processing_mode:
              request_header_mode: SEND
              response_header_mode: SEND
